[metadata]
name = snowflake_query-joon-kim
version = 0.0.4
author = Joon Kim
author_email = bk268@cornell.edu
description = Connect to Snowflake and Run Query
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joonkim305/snowflake_query
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src